reasoning_transformations/CRUXEval/Transformations/logs/sample_298.log
STARTING AT 2024-10-19 22:15:58.407064
[START] processing file: sample_298
*Running tests for: sample_298
 
Result: ['tests_pass']
tests_pass sample_298 /home/yang/Benchmark/dataset/cruxeval/code//sample_298.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_298
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_298
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_298
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_298", line 9
    nonlocal newcharacter_1, new_character
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'newcharacter_1' found

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_298", line 9\n    nonlocal newcharacter_1, new_character\n    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nSyntaxError: no binding for nonlocal \'newcharacter_1\' found\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_298
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_298
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_298
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_298
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_298
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_298
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_298
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_298
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_298.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_298.py
*Running tests for: sample_298
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_298.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_298',
  'genetic_algorithm': None,
  'original_code': 'def f(text):\n'
                   '    new_text = list(text)\n'
                   '    for i in range(len(new_text)):\n'
                   '        character = new_text[i]\n'
                   '        new_character = character.swapcase()\n'
                   '        new_text[i] = new_character\n'
                   "    return ''.join(new_text)",
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_298.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_298.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_298.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 5.22533,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '    ttest_ind([47, 53, 40], [51, 29, 36])\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      "    base64.b64encode(b'03216895309134375545')\n"
                      "    parse('2024-10-19 22:16:02')\n"
                      "    HTTPConnection('google.com', port=80)\n"
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(text):\n'
                      '    datetime.datetime.now()\n'
                      '    time.sleep(0.08)\n'
                      '    Fernet.generate_key()\n'
                      '    shuffle([65, 36, 89])\n'
                      '    try:\n'
                      '        new_text = list(text)\n'
                      '        LoopChecker13 = [569][0]\n'
                      '        LoopChecker23 = 568\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker13, LoopChecker23)):\n'
                      '            for i in range(len(new_text)):\n'
                      '                newcharacter_1 = new_text[i]\n'
                      '                new_character = '
                      'newcharacter_1.swapcase()\n'
                      '                new_text[i] = new_character\n'
                      '        else:\n'
                      '            pass\n'
                      "        return ''.join(new_text)\n"
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_298. Total Time: 5.22533
END AT 2024-10-19 22:16:03.633473
